revert to using JDK8 fix SCL-17372